# MuDCoD

./: .gitattributes  LICENSE  README.md  pyproject.toml  tags
docs/: community_detection.html  index.html  network_distances.html  network_simulations.html  sutils.html  visualization.html
dypoces/: muspces.py  nw.py  pisces.py  static.py
dypoces/utils/: gcnw.py  sutils.py  visualization.py
examples/: community_detection.py  cross_validation.py  mus_dynamic_dcbm.py
experiments/: analyze_communities.ipynb  construct_adjacency_matrix.py  output_networks.R  perform_community_detection.py  perform_cross_validation.py  slurm_submission.sh  split_subjects.py
experiments/jerber2021/: perform_community_detection.py
mudcod/: community_detection.py  network_distances.py  network_simulations.py  sutils.py  visualization.py
notebooks/: association-rule-mining.ipynb  nw-similarity.ipynb
simulations/: comparison.py  report.py  report_comm_detection.ipynb  run_simulation.sh  simulation.py  simulation_submission.sh  tmp_slurm_submission.sh
