[tool.poetry]
name = "mudcod"
version = "0.1.0"
description = "Community detection in dynamic multi-subject networks."
authors = ["Ali Osman Berk Şapcı"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
networkx = "^2.6.3"
pandas = "^1.3.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
